# idea-clarifier-mcp

./: .gitignore  AGENT_GUIDE.md  README.md  pyproject.toml  test_integration.py
docs/: index.html
skills/idea-clarifier-mcp/: SKILL.md
skills/idea-clarifier-mcp/agents/: openai.yaml
src/idea_clarifier/: daemon.py  server.py
src/idea_clarifier/static/: index.html
src/idea_clarifier/static/locales/: en.json  tr.json
