[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idea-clarifier-mcp"
version = "0.1.0"
description = "MCP server for clarifying project ideas through structured Q&A"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
idea-clarifier = "idea_clarifier.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_clarifier"]
