[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idea-clarifier-mcp"
version = "0.1.0"
description = "MCP server for clarifying project ideas through structured Q&A"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
hermes = [
    # For Hermes Agent hosts, make sure to also install:
    # pip install 'hermes-agent[mcp]'
]

[project.scripts]
idea-clarifier = "idea_clarifier.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_clarifier"]
